tests/valid_programs/intersections/simple.duck
type And = { x: Int } & { y: Int };

fn main() {
    let a: And = { x: 5, y: 5 };
}
