tests/errors/require_tuple_give_string.duck
fn main() {
    let x: (String, Int) = 5;
}
